--- a/application.yml.dist
+++ b/application.yml.dist
@@ -1,4 +1,4 @@
 spring.datasource.url: jdbc:mysql://localhost:3306/dbname
-spring.datasource.username: user
+spring.datasource.username: root
 spring.datasource.password: pass
 spring.jpa.hibernate.ddl-auto: create
