--- a/application.yml.dist
+++ b/application.yml.dist
@@ -1,4 +1,5 @@
-spring.datasource.url: jdbc:mysql://localhost:3306/dbname
+spring.datasource.url: jdbc:mysql://localhost:3306/dbname?useUnicode=true&serverTimezone=UTC
 spring.datasource.username: root
 spring.datasource.password: pass
-spring.jpa.hibernate.ddl-auto: create
+spring.jpa.hibernate.ddl-auto: create-drop
+spring.jpa.database-platform: org.hibernate.dialect.MySQL8Dialect
